Arrumado um bug e overflow adicionado

--- a/Image Slider/style.css
+++ b/Image Slider/style.css
@@ -9,8 +9,10 @@ body {
 }
 
 .slide-container {
+  border: solid 1px #FFF;
   width: 15.3%;
   margin: auto;
+  overflow: hidden;
 }
 
 .slide-div {
